add progress interface
